color generator for each node

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/libs/stats.min.js"></script>
     <script src="js/controls/TrackballControls.js"></script>
 	<script src="myJS/myApp.js"></script>
+	<script src="myJS/myCanvas.js"></script>
 	<script src="myJS/Player.js"></script>
 	<script src="myJS/Label.js"></script>
 
