--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - interactive cubes</title>
+		<title>USOPEN Women's Twitter Popularity</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -19,6 +19,7 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
     
    	<script src="build/three.min.js"></script>
+   	<script src="js/chroma.min.js"></script>
     <script src="js/libs/stats.min.js"></script>
     <script src="js/controls/TrackballControls.js"></script>
 	<script src="myJS/myApp.js"></script>
